# actix-postgres-api

./: .gitignore  README.md
actix_postgres_api/: Cargo.toml
actix_postgres_api/migrations/: 20250306220539_create_users_table.sql  20250307215355_add_password_support.sql  20250308143333_add_user_role.sql.sql  20250309000000_add_admin_role.sql  20250310000000_create_chat_tables.sql  20250315121847_create_appointments_table.sql  20250317223800_modify_appointments_table.sql
actix_postgres_api/src/: auth_utils.rs  config.rs  error.rs  handlers.rs  lib.rs  logging.rs  main.rs  middleware.rs  models.rs  monitoring.rs  repository.rs
actix_postgres_api/src/auth_utils/: jwt.rs  mod.rs  oauth.rs  roles.rs  validation.rs
actix_postgres_api/src/database/: appointment.rs  chat.rs  connection.rs  mod.rs  user.rs
actix_postgres_api/src/handlers/: appointment.rs  auth.rs  chat.rs  mod.rs  oauth.rs  statistics.rs  user.rs
actix_postgres_api/src/logging/: mod.rs  tracing.rs
actix_postgres_api/src/middleware/: auth_middleware.rs  cors.rs  mod.rs  performance_metrics.rs  tracing.rs
actix_postgres_api/src/models/: appointment.rs  auth.rs  chat.rs  mod.rs  role.rs  statistics.rs  user.rs
actix_postgres_api/src/monitoring/: memory.rs  metrics.rs  mod.rs  system.rs
actix_postgres_api/src/services/: appointment.rs  auth.rs  mod.rs  user.rs
actix_postgres_api/tests/: api_tests.rs
actix_postgres_crud/: Cargo.toml
actix_postgres_crud/migrations/: 20250307212522_add_phone_number_and_required_full_name.sql
actix_postgres_crud/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs
actix_postgres_crud/tests/: api_tests.rs
docs/: README.md  api-endpoints.md  api-usage-examples.md  data-models.md  getting-started.md  monitoring.md  security.md  websocket-chat.md
