[package]
name = "actix_postgres_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-http = "3.0" 
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1.4", features = ["serde", "v4"] }
env_logger = "0.10"
log = "0.4"
thiserror = "2.0"
anyhow = "1.0"
bcrypt = "0.17"
rand = "0.9"
regex = "1.10"