[package]
name = "actix_postgres_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-http = "3.0" 
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1.4", features = ["serde", "v4"] }
env_logger = "0.10"
log = "0.4"
thiserror = "2.0"
anyhow = "1.0"
bcrypt = "0.17"
rand = "0.9"
regex = "1.10"

# Added dependencies for monitoring and logging
prometheus = "0.13"
prometheus-client = "0.22"
actix-web-prom = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
lazy_static = "1.4"
sysinfo = "0.30"
time = "0.3"
futures = "0.3"

# OAuth 2.0 dependencies
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.1"
url = "2.4"
serde_urlencoded = "0.7"