[package]
name = "user_crud_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-http = "3.0" 
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1.4", features = ["serde", "v4"] }
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"